fix: clipping css issues

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,12 +3,14 @@ body {
   height: 100%;
 }
 
-.form-signin, .form-signup {
+.form-signin,
+.form-signup {
   max-width: 330px;
   padding: 1rem;
 }
 
-.form-signin, .form-signup .form-floating:focus-within {
+.form-signin .form-floating:focus-within,
+.form-signup .form-floating:focus-within {
   z-index: 2;
 }
 
@@ -16,12 +18,18 @@ body {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
+  position: relative;
+}
+
+.form-signin input[type="email"]:focus {
+  z-index: 3;
 }
 
 .form-signin input[type="password"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+  position: relative;
 }
 
 .form-signup input[type="text"] {
